[package]
name = "placenew"
version = "3.0.0"
authors = ["peterparker <theaustinbennett@gmail.com>"]
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

license = "MIT"
description = """
A crate providing the macro 'place_boxed' and 'place_into', place_boxed! allows you to construct a structure or value
into a Box<T> in-place, while place_into! allows you to construct a structure or value into a pointer in-place
"""
repository = "https://github.com/Austin-Bennett/placenew"
readme = "README.md"

[lib]
proc-macro = true

[features]

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }

